WIP feat(styles): changed structure for sidebar

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,3 +1,6 @@
-$border-color: #dadada !default;;
+$border-color: #dadada !default;
+$dark-text: #4a4a4a;
 $btn-bg: darkgray !default;
+
 $animation-time: 300ms;
+$top-bar-height: 60px;
