WIP feat(styles): Added styling and begin work on drag&drop

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,3 +3,7 @@
 @import "left-panel";
 @import "top-bar";
 @import "sidebar";
+@import "element-settings";
+@import "elements-panel";
+@import "elements-section";
+@import "content";
