--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,3 +4,5 @@ $btn-bg: darkgray !default;
 
 $animation-time: 300ms;
 $top-bar-height: 60px;
+$settings-block-row-height: 30px;
+$settings-block-padding: 15px;
