--- a/app/styles/element-settings.scss
+++ b/app/styles/element-settings.scss
@@ -4,9 +4,9 @@
   background-color: lightgrey;
   margin-bottom: 10px;
 
-  .empty-block-text {
-    margin: 0;
-    padding: 15px 0;
+  fieldset {
+    margin-top: 15px;
+    border-top: 1px solid $border-color-dark;
   }
 
   h2 {
@@ -17,20 +17,49 @@
     position: relative;
     cursor: pointer;
 
-    &.opened:after {
+    &:after {
       content: '';
       position: absolute;
       right: 0;
       top: -1px;
-      background: url("../images/chevron-down.svg") no-repeat;
-      background-size: 20px 20px;
       width: 20px;
       height: 20px;
-    }
-    &.closed:after {
       background: url("../images/chevron-up.svg") no-repeat;
       background-size: 20px 20px;
     }
+
+    &.closed:after {
+      background: url("../images/chevron-down.svg") no-repeat;
+      background-size: 20px 20px;
+    }
+  }
+
+  h2.opener + .holder {
+    height: auto;
+    overflow: visible;
+  }
+
+  h2.opener {
+    &.closed {
+      margin-bottom: 0;
+
+      & + .holder {
+        height: 0;
+        overflow: hidden;
+      }
+    }
+  }
+
+  h3 {
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0;
+    padding: 10px 0;
+  }
+
+  .empty-block-text {
+    margin: 0;
+    padding: 15px 0;
   }
 
   .element-attributes {
@@ -65,5 +94,12 @@
     width: 100%;
     height: $settings-block-row-height;
     font-size: 12px;
+  }
+
+  textarea {
+    font-size: 14px;
+    resize: none;
+    width: 100%;
+    height: 75px;
   }
 }
