--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,8 +1,10 @@
 $border-color: #dadada !default;
-$dark-text: #4a4a4a;
+$border-color-dark: #4a4a4a !default;
+
+$dark-text: #4a4a4a !default;
 $btn-bg: darkgray !default;
 
-$animation-time: 300ms;
-$top-bar-height: 60px;
-$settings-block-row-height: 30px;
-$settings-block-padding: 15px;
+$animation-time: 300ms !default;;
+$top-bar-height: 60px !default;;
+$settings-block-row-height: 30px !default;;
+$settings-block-padding: 15px !default;;
